--- a/category.html
+++ b/category.html
@@ -4,11 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Category</title>
+    <!-- bootstrap css  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <!-- main css  -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- category css  -->
+    <link rel="stylesheet" href="css/category.css">
 </head>
 
 <body>
-
     <header>
         <nav class="navbar navbar-expand-lg container-fluid">
             <div class="row d-flex align-items-center justify-content-between w-100 navbar-row">
@@ -45,8 +54,69 @@
             </div>
         </nav>
     </header>
+    <div class="banner-img">
+        <h1>Category</h1>
+    </div>
 
 
+
+    <!-- category section start here -->
+    <section>
+        <div class="container-fluid category-container py-5">
+            <div class="row g-4">
+                <div class="col-lg-3">
+                    <div class="category-box">
+                        <div class="category-image category-image-1"></div>
+                        <h5 class="category-title mt-3">Product Name</h5>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="category-box">
+                    <div class="category-image category-image-2"></div>
+                    <h5 class="category-title mt-3">Product Name</h5>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="category-box">
+                    <div class="category-image category-image-3"></div>
+                    <h5 class="category-title mt-3">Product Name</h5>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="category-box">
+                    <div class="category-image category-image-3"></div>
+                    <h5 class="category-title mt-3">Product Name</h5>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="category-box">
+                    <div class="category-image category-image-3"></div>
+                    <h5 class="category-title mt-3">Product Name</h5>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="category-box">
+                    <div class="category-image category-image-3"></div>
+                    <h5 class="category-title mt-3">Product Name</h5>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="category-box">
+                    <div class="category-image category-image-3"></div>
+                    <h5 class="category-title mt-3">Product Name</h5>
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="category-box">
+                    <div class="category-image category-image-3"></div>
+                    <h5 class="category-title mt-3">Product Name</h5>
+                    </div>
+                </div>
+                
+            </div>
+            <button type="button" class="margin-auto view-btn"> View More</button>
+        </div>
+    </section>
 
     <!-- footer section start here -->
     <footer class=" footer-section">
@@ -104,7 +174,14 @@
     <div class="copyright-sec">
         <p class="copyright text-center">Copyright &copy; 2025 Your Company Name</p>
     </div>
-
+    <!-- bootstrap js  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- main js  -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
