--- a/category.html
+++ b/category.html
@@ -59,64 +59,144 @@
     </div>
 
 
+    <main>
+        <div class="container-fluid">
+            <div class="row">
+                <!-- Sidebar -->
+                <div class="col-3 col-md-2  text-white p-3 sidebar align-self-start">
+                    <h4 class="mb-4 sidebar-heading">Category</h4>
+                    <ul class="nav flex-column gap-3">
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Residential</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Commercial</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Industrial</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="#">Outdoor</a></li>
+                    </ul>
+                </div>
 
-    <!-- category section start here -->
-    <section>
-        <div class="container-fluid category-container py-5">
-            <div class="row g-4">
-                <div class="col-lg-3">
-                    <div class="category-box">
-                        <div class="category-image category-image-1"></div>
-                        <h5 class="category-title mt-3">Product Name</h5>
-                    </div>
+                <!-- Main content -->
+                <div class="col-9 col-md-10 p-4">
+                    <!-- category section start here -->
+                    <section>
+                        <div class="container-fluid category-container py-3">
+                            <div class="row g-4">
+                                <div class="col-lg-9">
+                                    <div class="category-container">
+                                        <div class="row g-4">
+                                            <div class="col-lg-4">
+                                                <div class="category-box">
+                                                    <div class="category-image category-image-1"></div>
+                                                    <div class="product-short-details">
+                                                        <h5 class="category-title mt-3">Product Name</h5>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="category-box">
+                                                    <div class="category-image category-image-2"></div>
+                                                    <div class="product-short-details">
+                                                        <h5 class="category-title mt-3">Product Name</h5>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="category-box">
+                                                    <div class="category-image category-image-3"></div>
+                                                    <div class="product-short-details">
+                                                        <h5 class="category-title mt-3">Product Name</h5>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="category-box">
+                                                    <div class="category-image category-image-3"></div>
+                                                    <div class="product-short-details">
+                                                        <h5 class="category-title mt-3">Product Name</h5>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="category-box">
+                                                    <div class="category-image category-image-3"></div>
+                                                    <div class="product-short-details">
+                                                        <h5 class="category-title mt-3">Product Name</h5>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="category-box">
+                                                    <div class="category-image category-image-3"></div>
+                                                    <div class="product-short-details">
+                                                        <h5 class="category-title mt-3">Product Name</h5>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="category-box">
+                                                    <div class="category-image category-image-3"></div>
+                                                    <div class="product-short-details">
+                                                        <h5 class="category-title mt-3">Product Name</h5>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="category-box">
+                                                    <div class="category-image category-image-3"></div>
+                                                    <div class="product-short-details">
+                                                        <h5 class="category-title mt-3">Product Name</h5>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <div class="category-box">
+                                                    <div class="category-image category-image-3"></div>
+                                                    <div class="product-short-details">
+                                                        <h5 class="category-title mt-3">Product Name</h5>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button type="button" class="margin-auto view-btn "> View More</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="asidebar-box">
+                                        <div class="aside-image">
+                                            <img src="images/asidebar-image.png" alt="">
+                                        </div>
+                                        <div class="off-bg">
+                                            <h5>10% <br>Off</h5>
+                                        </div>
+                                        <h5 class="new-product-tag">New</h5>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </section>
                 </div>
-                <div class="col-lg-3">
-                    <div class="category-box">
-                    <div class="category-image category-image-2"></div>
-                    <h5 class="category-title mt-3">Product Name</h5>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="category-box">
-                    <div class="category-image category-image-3"></div>
-                    <h5 class="category-title mt-3">Product Name</h5>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="category-box">
-                    <div class="category-image category-image-3"></div>
-                    <h5 class="category-title mt-3">Product Name</h5>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="category-box">
-                    <div class="category-image category-image-3"></div>
-                    <h5 class="category-title mt-3">Product Name</h5>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="category-box">
-                    <div class="category-image category-image-3"></div>
-                    <h5 class="category-title mt-3">Product Name</h5>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="category-box">
-                    <div class="category-image category-image-3"></div>
-                    <h5 class="category-title mt-3">Product Name</h5>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="category-box">
-                    <div class="category-image category-image-3"></div>
-                    <h5 class="category-title mt-3">Product Name</h5>
-                    </div>
-                </div>
-                
             </div>
-            <button type="button" class="margin-auto view-btn"> View More</button>
         </div>
-    </section>
+
+    </main>
+
 
     <!-- footer section start here -->
     <footer class=" footer-section">
