--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     </div>
                     <div class="col-lg-4 d-flex justify-content-end">
                         <form class="d-flex" role="search">
-                            <input class="form-control me-2 search-input" type="search" placeholder="Search" aria-label="Search" />
+                            <input class="form-control me-2 search-input" type="search" placeholder="Search"
+                                aria-label="Search" />
                             <button class="search-btn" type="submit">Search</button>
                         </form>
                     </div>
@@ -55,9 +56,16 @@
             </nav>
         </header>
         <div class="banner-image">
-            <img src="images/banner-light.jpg" alt="">
+            <img src="images/banner-light.png" alt="">
         </div>
-
+        <div class="factory-img">
+            <img src="images/factory-lighting.png" alt="">
+        </div>
+        <div class="text-center banner-content ">
+            <h1 class="text-uppercase  text-white">Lorem ipsum dolor sit</h1>
+            <p class=" text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsum quas eligendi accusamus corrupti esse soluta, repellendus error quod iusto</p>
+            <button type="button" class="btn text-capitalize text-white btn-success mt-3">explore now</button>
+        </div>
     </div>
 
     <!-- category section start here -->
