add page and old page developed

--- a/category.html
+++ b/category.html
@@ -23,7 +23,9 @@
             <div class="row d-flex align-items-center justify-content-between w-100 navbar-row">
                 <div class="col-lg-2">
                     <div class="logo">
-                        <img src="images/logo.png" alt="logo" />
+                        <a href="index.html">
+                            <img src="images/logo.png" alt="logo" />
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -59,17 +61,18 @@
     </div>
 
 
+
     <main>
         <div class="container-fluid">
             <div class="row">
                 <!-- Sidebar -->
-                <div class="col-3 col-md-2  text-white p-3 sidebar align-self-start">
+                <div class="col-3 col-md-2  p-3 sidebar align-self-start">
                     <h4 class="mb-4 sidebar-heading">Category</h4>
                     <ul class="nav flex-column gap-3">
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Residential</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Commercial</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Industrial</a></li>
-                        <li class="nav-item"><a class="nav-link text-white" href="#">Outdoor</a></li>
+                        <li class="side-nav-item"><a class="nav-link" href="#">Residential</a></li>
+                        <li class="side-nav-item"><a class="nav-link" href="#">Commercial</a></li>
+                        <li class="side-nav-item"><a class="nav-link" href="#">Industrial</a></li>
+                        <li class="side-nav-item"><a class="nav-link" href="#">Outdoor</a></li>
                     </ul>
                 </div>
 
@@ -87,8 +90,10 @@
                                                     <div class="category-image category-image-1"></div>
                                                     <div class="product-short-details">
                                                         <h5 class="category-title mt-3">Product Name</h5>
-                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
-                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor
+                                                            sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button"
+                                                            class="btn margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -97,8 +102,10 @@
                                                     <div class="category-image category-image-2"></div>
                                                     <div class="product-short-details">
                                                         <h5 class="category-title mt-3">Product Name</h5>
-                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
-                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor
+                                                            sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button"
+                                                            class="btn margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -107,8 +114,10 @@
                                                     <div class="category-image category-image-3"></div>
                                                     <div class="product-short-details">
                                                         <h5 class="category-title mt-3">Product Name</h5>
-                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
-                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor
+                                                            sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button"
+                                                            class="btn margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -117,8 +126,10 @@
                                                     <div class="category-image category-image-3"></div>
                                                     <div class="product-short-details">
                                                         <h5 class="category-title mt-3">Product Name</h5>
-                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
-                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor
+                                                            sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button"
+                                                            class="btn margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -127,8 +138,10 @@
                                                     <div class="category-image category-image-3"></div>
                                                     <div class="product-short-details">
                                                         <h5 class="category-title mt-3">Product Name</h5>
-                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
-                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor
+                                                            sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button"
+                                                            class="btn margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -137,8 +150,10 @@
                                                     <div class="category-image category-image-3"></div>
                                                     <div class="product-short-details">
                                                         <h5 class="category-title mt-3">Product Name</h5>
-                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
-                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor
+                                                            sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button"
+                                                            class="btn margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -147,8 +162,10 @@
                                                     <div class="category-image category-image-3"></div>
                                                     <div class="product-short-details">
                                                         <h5 class="category-title mt-3">Product Name</h5>
-                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
-                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor
+                                                            sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button"
+                                                            class="btn margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -157,8 +174,10 @@
                                                     <div class="category-image category-image-3"></div>
                                                     <div class="product-short-details">
                                                         <h5 class="category-title mt-3">Product Name</h5>
-                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
-                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor
+                                                            sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button"
+                                                            class="btn margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -167,8 +186,10 @@
                                                     <div class="category-image category-image-3"></div>
                                                     <div class="product-short-details">
                                                         <h5 class="category-title mt-3">Product Name</h5>
-                                                        <p class="category-description text-white-40">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
-                                                        <button type="button" class="btn margin-auto explore-btn">Explore</button>
+                                                        <p class="category-description text-white-40">Lorem, ipsum dolor
+                                                            sit amet consectetur adipisicing elit. Nisi, aperiam!</p>
+                                                        <button type="button"
+                                                            class="btn margin-auto explore-btn">Explore</button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -177,15 +198,17 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
-                                    <div class="asidebar-box">
-                                        <div class="aside-image">
-                                            <img src="images/asidebar-image.png" alt="">
+                                    <a href="#">
+                                        <div class="asidebar-box">
+                                            <div class="aside-image">
+                                                <img src="images/asidebar-image.png" alt="">
+                                            </div>
+                                            <div class="off-bg">
+                                                <h5>10% <br>Off</h5>
+                                            </div>
+                                            <h5 class="new-product-tag">New</h5>
                                         </div>
-                                        <div class="off-bg">
-                                            <h5>10% <br>Off</h5>
-                                        </div>
-                                        <h5 class="new-product-tag">New</h5>
-                                    </div>
+                                    </a>
                                 </div>
 
                             </div>
