--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                 <div class="row d-flex align-items-center justify-content-between w-100 navbar-row">
                     <div class="col-lg-2">
                         <div class="logo">
+                            <a href="index.html">
                             <img src="images/logo.png" alt="logo" />
+                            </a>
                         </div>
                     </div>
                     <div class="col-lg-6">
