--- a/product-details.html
+++ b/product-details.html
@@ -119,6 +119,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="main-features  mt-5">
+                        <div class="type-of-features d-flex gap-3 ">
+                            <div class="spacifice-part"> </div>
+                            <p class="spacifice-part-details">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Totam obcaecati
+                                similique nesciunt officia excepturi vero inventore, quae dolore harum
+                                dignissimos corrupti neque sapiente assumenda.</p>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
