--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
     <!-- main css  -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
 
 </head>
 
@@ -25,7 +32,7 @@
                     <div class="col-lg-2">
                         <div class="logo">
                             <a href="index.html">
-                            <img src="images/logo.png" alt="logo" />
+                                <img src="images/logo.png" alt="logo" />
                             </a>
                         </div>
                     </div>
@@ -65,7 +72,8 @@
         </div>
         <div class="text-center banner-content ">
             <h1 class="text-uppercase  text-white">Lorem ipsum dolor sit</h1>
-            <p class=" text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsum quas eligendi accusamus corrupti esse soluta, repellendus error quod iusto</p>
+            <p class=" text-white-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ipsum quas eligendi
+                accusamus corrupti esse soluta, repellendus error quod iusto</p>
             <button type="button" class="btn text-capitalize text-white btn-success mt-3">explore now</button>
         </div>
     </div>
