--- a/product-details.html
+++ b/product-details.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product details</title>
     <!-- bootstrap css  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -19,6 +19,7 @@
 
     <!-- product details css -->
     <link rel="stylesheet" href="css/product-details.css">
+
 </head>
 
 <body>
@@ -82,7 +83,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h1>Product Name (LED Light)</h1>
+                    <h1 class="heading-text">Product Name (LED Light)</h1>
                     <div class="item-detail-description mt-4">
                         <p class="item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
                             dolorem placeat laborum maiores ducimus corrupti soluta? Aliquam quisquam consequuntur
@@ -119,8 +120,22 @@
                             </div>
                         </div>
                     </div>
-                    <div class="main-features  mt-5">
+                    <div class="main-features  mt-5 d-flex flex-column gap-5">
                         <div class="type-of-features d-flex gap-3 ">
+                            <div class="spacifice-part"> </div>
+                            <p class="spacifice-part-details">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Totam obcaecati
+                                similique nesciunt officia excepturi vero inventore, quae dolore harum
+                                dignissimos corrupti neque sapiente assumenda.</p>
+                        </div>
+                        <div class="typeof-features d-flex gap-3 ">
+                            <div class="spacifice-part"> </div>
+                            <p class="spacifice-part-details">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                Totam obcaecati
+                                similique nesciunt officia excepturi vero inventore, quae dolore harum
+                                dignissimos corrupti neque sapiente assumenda.</p>
+                        </div>
+                        <div class="typeof-features d-flex gap-3 ">
                             <div class="spacifice-part"> </div>
                             <p class="spacifice-part-details">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                                 Totam obcaecati
@@ -131,8 +146,106 @@
                     </div>
                 </div>
             </div>
+            <!-- features section start here -->
+            <div class="features container-fluid my-5">
+                <h2 class="text-center heading-text">Features</h2>
+                <div class="row d-flex justify-content-center mt-4">
+                    <div class="col-lg-3 text-center">
+                        <div class="feature-box d-flex flex-column align-items-center mt-4">
+                            <div class="feature-icon mb-3 ">
+                                <img src="images/feature-1.png" alt="icon">
+                            </div>
+                            <h5>High Quality</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 text-center">
+                        <div class="feature-box d-flex flex-column align-items-center mt-4">
+                            <div class="feature-icon mb-3">
+                                <img src="images/feature-1.png" alt="icon">
+                            </div>
+                            <h5>High Quality</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 text-center">
+                        <div class="feature-box d-flex flex-column align-items-center mt-4">
+                            <div class="feature-icon mb-3">
+                                <img src="images/feature-1.png" alt="icon">
+                            </div>
+                            <h5>High Quality</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 text-center">
+                        <div class="feature-box d-flex flex-column align-items-center mt-4">
+                            <div class="feature-icon mb-3">
+                                <img src="images/feature-1.png" alt="icon">
+                            </div>
+                            <h5>High Quality</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid my-5">
+            <h2 class="heading-text">More Products</h2>
+            <div class="row mt-4">
+                <div class="col-lg-2">
+                    <a href="#" class="more-product-box text-center mt-4">
+                        <div class="more-product-image">
+                            <img src="images/more-product1.webp" alt="product">
+                        </div>
+                        <h5 class="mt-3 product-name heading-text">Product Name</h5>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#" class="more-product-box text-center mt-4">
+                        <div class="more-product-image">
+                            <img src="images/more-product.jpg" alt="product">
+                        </div>
+                        <h5 class="mt-3 product-name">Product Name</h5>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#" class="more-product-box text-center mt-4">
+                        <div class="more-product-image">
+                            <img src="images/more-product3_.jpg" alt="product">
+                        </div>
+                        <h5 class="mt-3 product-name">Product Name</h5>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#" class="more-product-box text-center mt-4">
+                        <div class="more-product-image">
+                            <img src="images/more-product1.webp" alt="product">
+                        </div>
+                        <h5 class="mt-3 product-name">Product Name</h5>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#" class="more-product-box text-center mt-4">
+                        <div class="more-product-image">
+                            <img src="images/more-product.jpg" alt="product">
+                        </div>
+                        <h5 class="mt-3 product-name">Product Name</h5>
+                    </a>
+                </div>
+                <div class="col-lg-2">
+                    <a href="#" class="more-product-box text-center mt-4">
+                        <div class="more-product-image">
+                            <img src="images/more-product3_.jpg" alt="product">
+                        </div>
+                        <h5 class="mt-3 product-name">Product Name</h5>
+                    </a>
+                </div>
+            </div>
         </div>
     </main>
+
+
 
 
     <!-- footer section start here -->
@@ -200,6 +313,10 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- main js  -->
     <script src="js/script.js"></script>
+
+
+
+
 </body>
 
 </html>
