--- a/category.html
+++ b/category.html
@@ -18,42 +18,30 @@
 </head>
 
 <body>
-    <header>
+    <header class="sticky-top">
         <nav class="navbar navbar-expand-lg container-fluid">
-            <div class="row d-flex align-items-center justify-content-between w-100 navbar-row">
-                <div class="col-lg-2">
-                    <div class="logo">
-                        <a href="index.html">
-                            <img src="images/logo.png" alt="logo" />
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav gap-4">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Blog</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4 d-flex justify-content-end">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2 search-input" type="search" placeholder="Search"
-                            aria-label="Search" />
-                        <button class="search-btn" type="submit">Search</button>
-                    </form>
-                </div>
+            <a class="navbar-brand logo" href="index.html">
+                <img src="images/logo.png" alt="logo" />
+            </a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+                <ul class="navbar-nav gap-4">
+                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
             </div>
+
+            <form class="d-flex ms-lg-3 mt-2 mt-lg-0" role="search">
+                <input class="form-control me-2 search-input" type="search" placeholder="Search" />
+                <button class="search-btn" type="submit">Search</button>
+            </form>
         </nav>
     </header>
     <div class="banner-img">
@@ -284,7 +272,7 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- main js  -->
-    <script src="js/script.js"></script>
+    <script src="js/common.js"></script>
 </body>
 
 </html>
